--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "4.7.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.13.1",
+    "react-modal-video": "^1.2.3",
+    "react-responsive-modal": "^4.0.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.4.3"
