--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,12 +12,15 @@
     "font-awesome": "4.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-carousel": "^4.0.6",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.7.4",
     "react-modal-video": "^1.2.3",
     "react-responsive-modal": "^4.0.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
